--- a/package.json
+++ b/package.json
@@ -4,7 +4,10 @@
   "description": "",
   "main": "app.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+  "scripts": {
+    "start": "node app.js",
+    "postinstall": "bower i",
+    "setup":"npm i && bower i"
   },
   "author": "",
   "license": "ISC",
