--- a/bower.json
+++ b/bower.json
@@ -18,6 +18,7 @@
     "font-awesome": "~4.4.0",
     "moment": "~2.10.6",
     "js-md5": "md5#~0.3.0",
-    "sweetalert": "~1.1.3"
+    "sweetalert": "~1.1.3",
+    "bootswatch": "~3.3.5+4"
   }
 }
